# mrs_meta

./: .gitman.yml  README.md
mrs_apptainer/: README.md
mrs_computer_vision_examples/cpp/example_edge_detector/: CMakeLists.txt  README.md  package.xml
mrs_computer_vision_examples/cpp/example_edge_detector/config/: edge_detector.yaml
mrs_computer_vision_examples/cpp/example_edge_detector/launch/: edge_detector.launch.py
mrs_computer_vision_examples/cpp/example_edge_detector/src/: edge_detector.cpp
mrs_computer_vision_examples/cpp/example_edge_detector/tmux/: layout.json  rviz.rviz  session.yml
mrs_computer_vision_examples/python/example_blob_detector/: CMakeLists.txt  README.md  create_python_env.sh  install_requirements.sh  package.xml  setup.py
mrs_computer_vision_examples/python/example_blob_detector/config/: blob_detector.yaml
mrs_computer_vision_examples/python/example_blob_detector/example_blob_detector/: blob_detector.py
mrs_computer_vision_examples/python/example_blob_detector/launch/: blob_detector.launch.py
mrs_computer_vision_examples/python/example_blob_detector/tmux/: layout.json  reference.py  rviz.rviz  session.yml
mrs_core_examples/cpp/example_controller_plugin/: CMakeLists.txt  package.xml  plugins.xml
mrs_core_examples/cpp/example_controller_plugin/config/: example_controller.yaml  example_custom_config.yaml
mrs_core_examples/cpp/example_controller_plugin/include/: pid.hpp
mrs_core_examples/cpp/example_controller_plugin/src/: example_controller.cpp
mrs_core_examples/cpp/example_controller_plugin/test/: run_specific_test.sh
mrs_core_examples/cpp/example_controller_plugin/tmux/: session.yml
mrs_core_examples/cpp/example_estimator_plugin/: CMakeLists.txt  package.xml  plugins.xml  readme.md
mrs_core_examples/cpp/example_estimator_plugin/config/: example_custom_config.yaml
mrs_core_examples/cpp/example_estimator_plugin/src/: example_estimator_plugin.cpp
mrs_core_examples/cpp/example_estimator_plugin/test/: run_specific_test.sh
mrs_core_examples/cpp/example_estimator_plugin/tmux/: kill.sh  session.yaml  start.sh
mrs_core_examples/cpp/example_pluginlib/example_plugin_manager/: CMakeLists.txt  package.xml
mrs_core_examples/cpp/example_pluginlib/example_plugins/: CMakeLists.txt  package.xml  plugins.xml
mrs_core_examples/cpp/example_waypoint_flier/: CMakeLists.txt  package.xml
mrs_core_examples/cpp/example_waypoint_flier/config/: waypoint_flier.yaml
mrs_core_examples/cpp/example_waypoint_flier_native/: CMakeLists.txt  README.md  package.xml
mrs_core_examples/python/example_sweeping_generator/: CMakeLists.txt  package.xml
mrs_octomap_planner/: CMakeLists.txt  package.xml
mrs_octomap_planner/include/: astar_planner.hpp
mrs_octomap_planner/src/: astar_planner.cpp  minimal_octomap_planner.cpp  octomap_planner.cpp
mrs_octomap_server/: CMakeLists.txt  README.md  package.xml
mrs_octomap_server/config/: default.yaml
mrs_octomap_server/include/mrs_octomap_server/: conversions.h
mrs_octomap_server/launch/: octomap.launch.py
mrs_octomap_server/src/: conversions.cpp  octomap_server.cpp
mrs_octomap_server/tmux/flightforge/: rviz.rviz  session.yml
mrs_octomap_tools/: CMakeLists.txt  package.xml
mrs_octomap_tools/src/: octomap_ceiling_remover.cpp  octomap_editor.cpp  octomap_rviz_visualizer.cpp  octomap_saver.cpp
mrs_open_vins_estimator_plugin/: CMakeLists.txt  package.xml  plugins.xml
mrs_open_vins_estimator_plugin/custom_configs/: mrs_uav_managers.yaml
mrs_open_vins_estimator_plugin/src/: open_vins_plugin.cpp
mrs_point_lio_estimator_plugin/: CMakeLists.txt  package.xml  plugins.xml
mrs_point_lio_estimator_plugin/.github/workflows/: ros_package_build.yml
mrs_point_lio_estimator_plugin/custom_configs/: example_custom_config.yaml
mrs_point_lio_estimator_plugin/src/: point_lio_plugin.cpp
mrs_uav_autostart/: CMakeLists.txt  package.xml
mrs_uav_autostart/launch/: automatic_start.launch.py
mrs_uav_autostart/src/: automatic_start.cpp
mrs_uav_autostart/test/: CMakeLists.txt
mrs_uav_autostart/test/takeoff_should_fail_outside_safety_area/: test.cpp
mrs_uav_autostart/test/takeoff_should_fail_topic_check/: CMakeLists.txt
mrs_uav_autostart/test/takeoff_should_fail_while_moving/: test.cpp
mrs_uav_autostart/test/takeoff_should_succeed/: test.cpp
mrs_uav_autostart/test/takeoff_trigerred_externally/: test.cpp
mrs_uav_trajectory_generation/: CMakeLists.txt
mrs_uav_trajectory_generation/include/eth_trajectory_generation/: polynomial_optimization_nonlinear.h
mrs_uav_trajectory_generation/src/eth_trajectory_generation/: polynomial.cpp
mrs_uav_trajectory_generation/test/: CMakeLists.txt
mrs_uav_trajectory_generation/test/include/: trajectory_generation_test.h
mrs_vins_imu_filter/: .gitignore  CMakeLists.txt  README.md  package.xml
mrs_vins_imu_filter/config/: icm_42688.yaml
mrs_vins_imu_filter/launch/: filter_icm_42688.py  filter_simulation.py
mrs_vins_imu_filter/src/: VinsImuFilter.cpp
mrs_vins_republisher/: .gitignore  CMakeLists.txt  README.md  package.xml
mrs_vins_republisher/config/: default.yaml
mrs_vins_republisher/launch/: vins_republisher.launch.py
mrs_vins_republisher/src/: VinsRepublisher.cpp  log_rate_limiter.h
point-lio/: .gitignore  CMakeLists.txt  README.md  package.xml
point-lio/.github/workflows/: ros_build_test.yml
point-lio/config/: default.yaml
point-lio/config/old/: avia.yaml  horizon.yaml  mid360.yaml  velody16.yaml
point-lio/config/presets/: mid360.yaml  simulation_gazebo.yaml  simulation_plain.yaml
point-lio/include/: common_lib.h  estimator.h  imu_processing.hpp  preprocess.h
point-lio/include/ikd-Tree/: ikd_Tree.cpp
point-lio/launch/: point_lio.launch.py
point-lio/launch/old/: mid360.launch  ouster64.launch  ouster64_gazebo.launch
point-lio/src/: estimator.cpp  laser_mapping.cpp  preprocess.cpp
realsense/: CMakeLists.txt  package.xml
realsense/config/: custom_config.yaml  custom_config_2.yaml
realsense/docker/: Dockerfile  compose.yaml  ros_entrypoint.sh
realsense/launch/: rs_launch.py  uav.launch.py  uav_2_cameras.launch.py
(+181 files in other folders)
