<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_octomap_server</name>
  <version>2.0.0</version>
  <description>MRS Octomap server</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="petr.stibinger@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>laser_geometry</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>mrs_modules_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
