<?xml version="1.0"?>
<package format="2">

  <name>mrs_octomap_tools</name>
  <version>1.0.0</version>
  <description>The MRS OctoMap tools package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>ament_cmake</depend>
  <depend>rclcpp_lifecycle</depend> <!-- Alternative à dynamic_reconfigure -->
  <depend>mrs_lib</depend> <!-- À vérifier pour la compatibilité ROS 2 -->
  <depend>visualization_msgs</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
