<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_open_vins_estimator_plugin</name>
  <version>2.0.0</version>
  <description>MRS open_vins state estimator plugin</description>

  <maintainer email="petrlmat@fel.cvut.cz">Matej Petrlik</maintainer>
  <author>Matej Petrlik</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>mrs_uav_managers</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_state_estimators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
