<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_point_lio_estimator_plugin</name>
  <version>2.0.0</version>
  <description>MRS Point LIO state estimator plugin</description>

  <author>Matej Petrlik</author>

  <author email="petrlmat@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="petrlmat@fel.cvut.cz">Matej Petrlik</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>mrs_uav_managers</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_state_estimators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
