<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_vins_imu_filter</name>
  <version>2.0.0</version>
  <description>The mrs_vins_imu_filter package</description>

  <author email="bednaj14@fel.cvut.cz">Jan Bednar</author>
  <maintainer email="pritzvac@fel.cvut.cz">Vaclav Pritzl</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
