<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>point_lio</name>
  <version>2.0.0</version>
  <description>PointLIO</description>

  <author email="hdj65822@connect.hku.hk">Dongjiao He</author>
  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>livox_ros_driver2</depend>
  <depend>eigen</depend>
  <depend>mrs_lib</depend>
  <depend>backward_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
