<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_realsense</name>

  <version>2.0.0</version>
  <description>MRS Realsense</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="jakub.lenner@fel.cvut.cz">Jakub Lenner</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>

  <depend>realsense2_camera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
