<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_edge_detector</name>
  <version>2.0.0</version>
  <description>Example Edge Detector</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
